visibility and s to ms transition css error fix

--- a/src/sass/partials/_about.scss
+++ b/src/sass/partials/_about.scss
@@ -69,7 +69,7 @@
     color: $first-font-color;
     margin: 0 auto;
     max-width: 200px;
-    transition: transform 1.1s ease-in-out;
+    transition: transform 1100ms ease-in-out;
     &:hover,
     &:focus {
       transform: scale(1.2);
@@ -275,7 +275,7 @@
 
 .is-hidden {
   transform: translateX(-100%);
-  visibility: 0;
+  visibility: hidden;
   opacity: 0;
 }
 
@@ -288,7 +288,7 @@
   box-shadow: 0px 8px 30px #d4144431;
   padding: 40px;
   transition-property: transform;
-  transform: 1s ease-in-out;
+  transform: 1100ms ease-in-out;
   max-width: 90%;
   background-image: url(./../images/about__background-mobile.png);
   background-position: center;
@@ -335,7 +335,7 @@
     font-size: 18px;
     line-height: 21px;
     margin: 0;
-    transition: transform 1.1s ease-in-out;
+    transition: transform 1100ms ease-in-out;
 
     &:hover,
     &:focus {
